--- a/src/main/resources/templates/pages/Topic/TopicList/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicList/index.html
@@ -58,9 +58,16 @@
                         <span style="width: 100%;" class="m-widget6__caption">?? MB</span>
                     </a>
                     <div style="grid-column: span 1;">
-                        <span style="width: 100%;" class="m-widget6__caption">
-                            <button hx-delete="/remove/${topic.topicName}" hx-confirm="Are you sure?" style="padding: 0.5rem 1rem;" type="button" class="btn m-btn--pill btn-secondary m-btn m-btn--hover-brand m-btn--custom">Delete</button>
-                        </span>
+                        <div style="width: 100%;" class="m-widget6__caption">
+                            <button
+                                    th:attr="hx-delete=@{/topic/{name}(name=${topic.topicName})}"
+                                    hx-delete="/account"
+                                    style="padding: 0.5rem 1rem;"
+                                    class="btn m-btn--pill btn-secondary m-btn m-btn--hover-brand m-btn--custom"
+                                    hx-confirm="Are you sure you wish to delete your account?">
+                                Delete
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
