update check lag realtime from GroupParitionDetail UI

--- a/src/main/resources/templates/layouts/BaseLayout/index.html
+++ b/src/main/resources/templates/layouts/BaseLayout/index.html
@@ -66,7 +66,15 @@
     <!--end::Global Theme Styles -->
     <link rel="shortcut icon" href="/assets/demo/media/img/logo/favicon.ico" />
 
+    <!--    htmx-->
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
+
+    <!--    toast-->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </head>
 
 <!-- end::Head -->
