--- a/src/main/resources/templates/pages/Topic/TopicList/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicList/index.html
@@ -64,7 +64,7 @@
                                     hx-delete="/account"
                                     style="padding: 0.5rem 1rem;"
                                     class="btn m-btn--pill btn-secondary m-btn m-btn--hover-brand m-btn--custom"
-                                    hx-confirm="Are you sure you wish to delete your account?">
+                                    hx-confirm="Are you sure you wish to delete the topic?">
                                 Delete
                             </button>
                         </div>
