--- a/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
+++ b/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
@@ -28,7 +28,7 @@
                           hx-target="#form-container"
                           hx-swap="outerHTML"
                           th:object="${topicForm}">
-                        <input type="text" name="config" :value="JSON.stringify(list)" />
+                        <input type="hidden" name="config" :value="JSON.stringify(list)" />
                         <div class="form-group m-form__group row">
                             <label for="example-text-input" class="col-2 col-form-label">Topic Name</label>
                             <div class="col-7">
@@ -75,7 +75,6 @@
                                         <option value="">Config Value</option>
                                     </select>
 
-
                                     <button type="button" @click="add()"
                                             :disabled="isAddDisabled"
                                             :class="{
@@ -99,7 +98,6 @@
                         </div>
                     </form>
                 </div>
-
             </div>
 
             <div class="col-10 ml-auto">
