--- a/src/main/resources/templates/pages/Topic/TopicDetail/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicDetail/index.html
@@ -128,7 +128,8 @@
                     </div>
                 </div>
                 <div class="tab-pane" id="m_user_profile_tab_3">
-                    <form class="m-form m-form--fit m-form--label-align-right">
+                    <form hx-put="/topic/adjust"
+                            class="m-form m-form--fit m-form--label-align-right">
                         <div class="m-portlet__body">
                             <div class="form-group m-form__group m--margin-top-10 m--hide">
                                 <div class="alert m-alert m-alert--default" role="alert">
@@ -149,7 +150,8 @@
                             <div class="form-group m-form__group row">
                                 <label for="example-text-input" class="col-2 col-form-label">Partition Number</label>
                                 <div class="col-7">
-                                    <input  type="number" th:value="${detail.totalPartition}" style="max-width: 50%;" class="form-control m-input" />
+                                    <input name="topicName" type="hidden" th:value="${detail.topicName}" style="max-width: 50%;" class="form-control m-input" />
+                                    <input name="partitionNumber" type="number" th:value="${detail.totalPartition}" style="max-width: 50%;" class="form-control m-input" />
                                 </div>
                             </div>
                             <div class="form-group m-form__group row">
@@ -165,7 +167,7 @@
                                     <div class="col-2">
                                     </div>
                                     <div class="col-7">
-                                        <button type="reset" class="btn btn-accent m-btn m-btn--air m-btn--custom">Save changes</button>&nbsp;&nbsp;
+                                        <button type="submit" class="btn btn-accent m-btn m-btn--air m-btn--custom">Save changes</button>&nbsp;&nbsp;
                                         <button type="reset" class="btn btn-secondary m-btn m-btn--air m-btn--custom">Cancel</button>
                                     </div>
                                 </div>
