added offset to avromessage and json message

--- a/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupList/index.html
+++ b/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupList/index.html
@@ -23,10 +23,10 @@
                         Consumer Group ID
                     </span>
                     <span style="width: 100%;" class="m-widget6__caption">
-                        Members Number
+                        Number of Members
                     </span>
                     <span style="width: 100%;" class="m-widget6__caption">
-                        Topic Number
+                        Number of Topics
                     </span>
                     <span style="width: 100%;" class="m-widget6__caption">
                         Latest Offset
