--- a/src/main/resources/templates/layouts/BaseLayout/index.html
+++ b/src/main/resources/templates/layouts/BaseLayout/index.html
@@ -66,15 +66,16 @@
     <!--end::Global Theme Styles -->
     <link rel="shortcut icon" href="/assets/demo/media/img/logo/apache-kafka-icon.png" />
 
-    <!--    htmx-->
+    <!-- begin::HTMX -->
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
+    <!-- end::HTMX -->
 
-    <!--    toast-->
+    <!-- begin::Toast -->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-
+    <!-- end::Toast -->
 </head>
 
 <!-- end::Head -->
@@ -92,10 +93,12 @@
             <div class="m-grid__item m-grid__item--fluid m-wrapper">
                 <!-- BEGIN: Subheader -->
                 <div layout:fragment="subheader"></div>
-
                 <!-- END: Subheader -->
+
                 <div class="m-content">
+                    <!-- begin:: General Information Block -->
                     <span layout:fragment="info"></span>
+                    <!-- end:: General Information Block -->
                 </div>
 
                 <div class="m-portlet m-portlet--full-height ">
@@ -103,21 +106,29 @@
                         <div class="m-portlet__head-caption">
                             <div class="m-portlet__head-title">
                                 <h3 class="m-portlet__head-text">
+                                    <!-- begin:: Label Description Block -->
                                     <span layout:fragment="labelDescription"></span>
+                                    <!-- end:: Label Description Block -->
                                 </h3>
                             </div>
                         </div>
+                        <!-- begin:: Button Block -->
                         <div layout:fragment="button"></div>
+                        <!-- end:: Button Block -->
                     </div>
                     <div class="m-portlet__body">
+                        <!-- begin:: Main Content Block -->
                         <div layout:fragment="content"></div>
+                        <!-- end:: Main Content Block -->
                     </div>
                 </div>
             </div>
-
-            <!--</div>-->
         </div>
         <!-- end::Body -->
+
+        <!-- begin:: Footer Script -->
+        <th:block layout:fragment="footer-scripts"></th:block>
+        <!-- end:: Footer Script -->
 
         <!--begin:: Global Mandatory Vendors -->
         <script src="/vendors/jquery/dist/jquery.js" type="text/javascript"></script>
@@ -196,10 +207,7 @@
 
         <!--begin::Page Scripts -->
         <script src="/assets/app/js/dashboard.js" type="text/javascript"></script>
-
         <!--end::Page Scripts -->
-
-        <th:block layout:fragment="footer-scripts"></th:block>
     </div>
 </body>
 </html>
