--- a/src/main/resources/templates/layouts/BaseLayout/index.html
+++ b/src/main/resources/templates/layouts/BaseLayout/index.html
@@ -76,6 +76,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- end::Toast -->
+    <style>
+        .hide { display: none; }
+    </style>
 </head>
 
 <!-- end::Head -->
