--- a/src/main/resources/templates/components/TopicList/index.html
+++ b/src/main/resources/templates/components/TopicList/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="topiclist">
-    <div th:each="topic : ${topiclist}" style="font-weight: 300; padding-top: 10px; display: grid; gap: 16px; grid-template-columns: repeat(5, 1fr) 0.5fr; align-items: center; color: #27272f;" class="m-widget6__item">
+    <div th:each="topic : ${subList}" style="font-weight: 300; padding-top: 10px; display: grid; gap: 16px; grid-template-columns: repeat(5, 1fr) 0.5fr; align-items: center; color: #27272f;" class="m-widget6__item">
         <a th:href="@{/topic/{topicName}(topicName=${topic.topicName})}" style="grid-column: span 5; display: grid; gap: 16px; grid-template-columns: repeat(5, 1fr); text-decoration: none;">
             <span th:text="${topic.topicName}" style="width: 100%; overflow-wrap: anywhere;" class="m-widget6__caption"></span>
             <span th:text="${topic.totalPartition}" style="width: 100%;" class="m-widget6__caption"></span>
@@ -14,6 +14,25 @@
             <span style="width: 100%;" class="m-widget6__caption">
                 <button hx-delete="/remove/${topic.topicName}" hx-confirm="Are you sure?" style="padding: 0.5rem 1rem;" type="button" class="btn m-btn--pill btn-secondary m-btn m-btn--hover-brand m-btn--custom">Delete</button></span>
         </div>
+    </div>
+    <div class="pagination">
+        <button th:if="${currentPage > 0}"
+                th:attr="hx-get=@{/topic/paginate(page=${currentPage - 1})}"
+                hx-target="#topicList-container"
+                hx-swap="innerHTML"
+                style="padding: 5px 10px;"
+                class="btn btn-accent m-btn m-btn--air m-btn--custom">
+            Prev
+        </button>
+        <span style="padding-top: 5px; margin: 0px 10px;" th:text="|Page ${currentPage + 1} / ${totalPages}|"></span>
+        <button th:if="${currentPage + 1 < totalPages}"
+                th:attr="hx-get=@{/topic/paginate(page=${currentPage + 1})}"
+                hx-target="#topicList-container"
+                hx-swap="innerHTML"
+                style="padding: 5px 10px;"
+                class="btn btn-accent m-btn m-btn--air m-btn--custom">
+            Next
+        </button>
     </div>
 </div>
 </body>
