fix filter by topic name bug in topic list ui

--- a/src/main/resources/templates/pages/Topic/TopicList/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicList/index.html
@@ -20,7 +20,7 @@
             <input
                     hx-get="/topic/filter"
                     hx-trigger="keyup changed delay:300ms"
-                    hx-target="#topic-list"
+                    hx-target="#topicList-container"
                     name="keyword"
                     placeholder="Search..."
                     class="p-2 border"
